# pure-numpy-autograd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
autograd_engine/: tensor.py
