[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autograd-engine"
version = "0.1.0"
description = "A from-scratch neural network training framework and autograd engine built in pure Python and NumPy"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.28", "plotly>=5.0"]
gpu = ["cupy-cuda12x>=12.0"]
dev = ["pytest>=7.0", "torch>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["autograd_engine*"]